# rocket-file-cache

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Rocket.toml  rustfmt.toml
examples/cache_pool/: Cargo.toml
examples/cache_pool/src/: main.rs
examples/cached_files/: Cargo.toml
examples/cached_files/src/: main.rs  tests.rs
examples/cached_files_fallback_to_fs/: Cargo.toml
examples/cached_files_fallback_to_fs/src/: main.rs
examples/dynamic_files/: Cargo.toml
examples/dynamic_files/src/: main.rs
src/: cache.rs  cache_builder.rs  cached_file.rs  in_memory_file.rs  lib.rs  named_in_memory_file.rs  priority_function.rs  responder_file.rs  sized_file.rs
test/: one_meg.txt
