[package]
name = "rocket-file-cache"
version = "0.2.2"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
exclude = [
    "test/*",
]

description = "An in-memory file cache for the Rocket web framework."
readme = "README.md"

homepage = "https://github.com/hgzimmerman/rocket-file-cache"
repository = "https://github.com/hgzimmerman/rocket-file-cache"

license-file = "LICENSE"

[dependencies]
rocket = "0.3.3"
#rocket_codegen = "0.3.3"
log = "0.3.8"

[dev-dependencies]
tempdir = "0.3.5"
rand = "0.3"
