[package]
name = "rocket-file-cache"
version = "1.0.0-beta"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
exclude = [
]

description = "An in-memory file cache for the Rocket web framework."
readme = "README.md"

homepage = "https://github.com/hgzimmerman/rocket-file-cache"
repository = "https://github.com/hgzimmerman/rocket-file-cache"
documentation = "https://docs.rs/crate/rocket-file-cache"

license-file = "LICENSE"

[dependencies]
rocket = "0.3.6"
log = "0.3.8"
concurrent-hashmap = "0.2.2"

[dev-dependencies]
tempdir = "0.3.5"
rand = "0.3"